syntax = "proto3";

package Teste.Protos;

message MyMessage {
	int32 id = 1;
	string nome = 2;
}

message SearchRequest {
	string file_mask     = 1;
	string start_dir     = 2;
	bool   recursive     = 3;
	bool   ignore_errors = 4;
}

message SearchResponse {
	string file_name = 1;
	bool   found = 2;
}

service SearchService {
  rpc Search (SearchRequest) returns (SearchResponse);
}